<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Live_Safe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="Name">Name</string>
	<string name="Phone">Phone No.</string>
	<string name="aad">Aadhar</string>
	<string name="emg1">EMG1</string>
	<string name="emg2">EMG2</string>
	<string name="emg3">EMG3</string>
	<string name="reg">Registration</string>
	<string name="safe">Safe</string>
	<string name="Emerg">Emergency</string>
	<string name="gethelp">Get Help!!</string>
	<string name="reportpolice">Report Police</string>
	<string name="cancel">Cancel</string>
	<string name="Add_New">Add New</string>
   <string name="edit">Edit Contact</string>
   <string name="delete">Delete Contact</string>
   <string name="save">Save Contact</string>
   <string name="deleteContact">Are you sure, you want to delete it.</string>
   <string name="yes">Yes</string>
   <string name="no">No</string>
</resources>